--- a/QuanLyKhachSan/src/test/QuanLyKhachHangJFrame.form
+++ b/QuanLyKhachSan/src/test/QuanLyKhachHangJFrame.form
@@ -48,8 +48,8 @@
               <EmptySpace max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
-              <Component id="tabs" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <Component id="tabs" min="-2" pref="816" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -130,7 +130,7 @@
                       </Group>
                       <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="txtQuocTich" pref="80" max="32767" attributes="0"/>
+                          <Component id="txtQuocTich" pref="259" max="32767" attributes="0"/>
                           <Component id="txtSolanThue" max="32767" attributes="0"/>
                           <Component id="txtEmail" alignment="0" max="32767" attributes="0"/>
                           <Component id="txtMaDoiTac" max="32767" attributes="0"/>
@@ -356,7 +356,7 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" alignment="0" pref="603" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="0" pref="811" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
